stylesheet.css
body {
	background-color: #131712;
}

h1 {
    color: #FFEF8E;
    size: 36pt;
    font-family: 'Martel', serif;
    font-weight: 900;
}

h2 {
    color: #FFEF8E;
    size: 36pt;
    font-family: 'Martel', serif;
    font-weight: 600;
}

h3 {
    color: rgba(164, 233, 192, 0.5);
    size: 24pt;
    font-family: 'Martel', serif;
    font-weight: 900;
    margin-bottom: 20px;
}

h4 {
    color: rgba(255, 239, 142, 0.86);
    size: 20pt;
    font-family: 'Cabin', sans-serif;
    font-weight: 600;
}

#intro {
    text-align: left;
    width: 497px;
    top: 106px;
    left: 280;
    position: relative;
}

#hero {
    background-color: white; 
    position: relative; 
}

#tree_container {
    margin: 0 auto;
    background-image: url("images/hero.jpg");
    width: 1025px;
    height: 472px; 
} 

#main {
    position: relative;
    top: 100px;
    width: 80%;
    margin: 0 auto;
}

.postcontainer { 
    position: relative;
    border-radius: 10px;
    background-color: rgba(52, 124, 109, 0.56);
}

.post {
    position: relative;
    padding-top: 35px;
    padding-bottom: 35px;
    overflow: hidden;
}

.postcopy {
    display: inline-block;
    float: left;
    width: 40%;
    margin-left: 35px;
}
    
.postdetails {
    position: relative;
    display: inline-block;
    float: right;
    width: 40%;
    margin-right: 35px;
}

.link {
    color: rgba(255, 255, 255, 0.9);
    size: 20pt;
    font-family: 'Cabin', sans-serif;
    font-weight: 600;
    text-decoration: none; 
}

.summary {
    font-family: 'Cabin', sans-serif; 
    color: rgba(255, 255, 255, 0.4);
    size: 18pt;
    font-weight: 600; 
}

.more {
    position: absolute;
    bottom: 35px;
    font-family: 'Cabin', sans-serif; 
    color: rgba(255, 255, 255, 0.75);
    size: 18pt;
    font-weight: 600; 
    text-decoration: underline;
}
    

.tags {
    display: inline-block; 
    float: right;
    margin-top: 0px;
    color: rgba(255, 255, 255, 0.6);
    size: 14pt;
    font-family: 'Cabin', sans-serif;
    font-weight: 400; 
}

.linkpic {
    width: 300px;
    float: right;
}

